--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "natours",
   "version": "1.0.0",
   "description": "Learning node, express and mongoDB",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon server.js"
   },
   "author": "Stephan Schaefer",
   "license": "ISC",
