add mongoos, refactoring, aggregations

--- a/config.env
+++ b/config.env
@@ -1,2 +1,4 @@
 NODE_ENV=development
 PORT=3000
+DATABASE=mongodb+srv://stephan:<PASSWORD>@cluster0-x0sld.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_PASSWORD=qJOv0QMp5di7jX7e
