--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "SET NODE_ENV=production&& nodemon server.js"
+    "start:prod": "SET NODE_ENV=production&& nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Stephan Schaefer",
   "license": "ISC",
@@ -14,7 +15,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.10",
     "morgan": "^1.9.1",
-    "slugify": "^1.3.4"
+    "slugify": "^1.3.4",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "eslint": "^6.2.1",
